k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: prod
  labels:
    app: nginx   # <-- labels belong here under metadata
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-hello-world
  namespace: prod
  labels:  # <-- labels should be under metadata
    app: java-hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-hello-world
  template:
    metadata:
      labels:
        app: java-hello-world
    spec:
      containers:
      - name: java-container
        image: ramsnow22/java_hello_world:latest
        ports:
        - containerPort: 8080
