k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: prod
  labels:
    app: nginx   # <-- labels belong here inside metadata
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP


---

apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: prod
labels:
  app: flask-app
spec:
  selector:
    app: flask-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: argocd-server-lb
  namespace: argocd
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: argocd-server
  ports:
  - name: https
    port: 443
    targetPort: 8080
